--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluent-elements",
-  "version": "r3.1",
+  "version": "0.3.1",
   "description": "A collection of Custom Elements by Nektro based on Fluent Design by Microsoft",
   "main": "fluent.html",
   "repository": "https://github.com/Nektro/fluent-elements.git",
